--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,21 @@
 <head>
   <title>AppTest1</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'defaults' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+<% if user_signed_in? %>
+  <%= link_to "Sign out", destroy_user_session_path, method: :get %>
+<% else %>
+  <%= link_to "Login", new_user_session_path %>
+  <%= link_to "Sign up", new_user_registration_path %>
+<% end %>
+
+
+  <% if notice %><p class="notice"><%= notice %></p><% end %>
+  <% if alert %><p class="alert"><%= alert %></p><% end %>
 <%= yield %>
 
 </body>
