--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,26 @@
 </head>
 <body>
 
-<% if user_signed_in? %>
-  <%= link_to "Sign out", destroy_user_session_path, method: :get %>
-<% else %>
-  <%= link_to "Login", new_user_session_path %>
-  <%= link_to "Sign up", new_user_registration_path %>
-<% end %>
-
-
-  <% if notice %><p class="notice"><%= notice %></p><% end %>
-  <% if alert %><p class="alert"><%= alert %></p><% end %>
-<%= yield %>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <%= link_to "sample app", '#', id: "logo" %>
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+			<% if user_signed_in? %>
+			  <li><%= link_to "Sign out", destroy_user_session_path, method: :get %></li>
+			<% else %>
+			  <li><%= link_to "Login", new_user_session_path %></li>
+			  <li><%= link_to "Sign up", new_user_registration_path %></li>
+			<% end %>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="container">
+      <% if notice %><p class="notice"><%= notice %></p><% end %>
+      <% if alert %><p class="alert"><%= alert %></p><% end %>
+      <%= yield %>
+    </div>
 
 </body>
 </html>
