--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Page#home</h1>
-<p>Find me in app/views/page/home.html.erb</p>
+<center>
+    <% @records.each do |record| %>
+	    <%= link_to image_tag(record.img_small, width: '160'), page_detail_path(:myparam => record) %>
+    <% end %>
+</center>
