--- a/app/views/page/detail.html.erb
+++ b/app/views/page/detail.html.erb
@@ -11,7 +11,7 @@
           <table class="table table-striped">
             <tr>
               <td class="row-title1">
-                Nom :
+                Titre
               </td>
               <td>
                 <%= @record.nom.html_safe %>  
@@ -22,7 +22,7 @@
             </tr>
             <tr>
               <td class="row-title1"> 
-                Réalisateur : 
+                Réalisateur
               </td>
               <td>
                 <%= @record.realisateur.html_safe %>
@@ -30,7 +30,7 @@
             </tr>
             <tr>
               <td class="row-title1">
-                Acteur(s) :
+                Acteur(s)
               </td>
               <td>
                 <%= @record.acteur.html_safe %>
@@ -38,7 +38,7 @@
             </tr>
             <tr>
               <td class="row-title1">
-                Année :
+                Année
               </td>
               <td>
                 <%= @record.annee %>
@@ -46,7 +46,7 @@
             </tr>
             <tr>
               <td class="row-title1">
-                Nationalité :
+                Nationalité
               </td>
               <td>
                 <%= @record.nationalite.html_safe %>
@@ -54,7 +54,7 @@
             </tr>
             <tr>
               <td class="row-title1">
-                Genre :
+                Genre
               </td>
               <td>
                 <%= @record.genre.html_safe %>
@@ -62,7 +62,7 @@
             </tr>
             <tr>
               <td class="row-title1">
-                Durée :
+                Durée
               </td>
               <td>
                 <%= @record.duree %>
@@ -70,7 +70,7 @@
             </tr>
             <tr>
               <td class="row-title1">
-                Résumé du film :
+                Synopsis
               </td>
               <td>
                 <%= @record.resume.html_safe %>
