--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Videotheque</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'defaults' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -12,13 +12,28 @@
       <div class="container">
         <%= link_to "Videotheque", '#', id: "logo" %>
         <nav>
+          <ul class="nav navbar-nav navbar-left">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <% if content_for? :menu %>
+                      <%= yield :menu %>
+                <% end %>
+              </ul>
+            </li>
+          </ul>
           <ul class="nav navbar-nav navbar-right">
-			<% if user_signed_in? %>
-			  <li><%= link_to "Sign out", destroy_user_session_path, method: :get %></li>
-			<% else %>
-			  <li><%= link_to "Login", new_user_session_path %></li>
-			  <li><%= link_to "Sign up", new_user_registration_path %></li>
-			<% end %>
+            <% if current_user.try(:admin?) %>
+              <li><%= link_to "Admin", new_user_session_path %></li>
+            <% else %>
+              <li><%= link_to "User", new_user_session_path %></li>
+            <% end %>
+      			<% if user_signed_in? %>
+      			  <li><%= link_to "Sign out", destroy_user_session_path, method: :get %></li>
+      			<% else %>
+      			  <li><%= link_to "Login", new_user_session_path %></li>
+      			  <li><%= link_to "Sign up", new_user_registration_path %></li>
+      			<% end %>
           </ul>
         </nav>
       </div>
