--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,20 @@
  *= require_tree .
  *= require_self
  */
+ // control the screen sizes
+
+/* uncomment and modify to change defaults bootstrap sizes 
+$screen-xs-min: 300px;
+$screen-sm-min: 400px;
+$screen-md-min: 800px;
+$screen-lg-min: 1200px;
+
+// this tells which screen size to use to start breaking on
+// will tell navbar when to collapse
+$grid-float-breakpoint: $screen-md-min;
+*/
+
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
@@ -51,13 +65,19 @@
 }
 
 body {
-  padding-top: 60px;
+  padding-top: 70px;
+}
+
+nav .container {
+    padding: 5px 20px 5px 10px;
+    margin: 5px 10px;
+    width: 100%;
 }
 
 .container {
     padding: 0px;
-    margin: 10px;
-    width: auto; 
+    margin: 0px;
+    width: 100%; 
 }
 
 section {
@@ -119,4 +139,18 @@ p {
 #logo:hover {
   color: #fff;
   text-decoration: none;
+}
+
+.scrollable-menu {
+    height: auto;
+    max-height: 90vh;
+    overflow-x: hidden;
+}
+
+/*.nav, .navbar-nav, .navbar-right {
+    width: auto !important; 
+}*/
+
+.navbar-form {
+  margin: 8px 0;
 }
