--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
-      <div class="navbar-header">
+        <div class="navbar-header">
           <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -78,6 +78,13 @@
           </button>
           <% if !user_signed_in? %>
             <%= link_to "Videotheque", '#', id: "logo" %>
+          <% else %>
+          <div id="nav-butons">
+            <% unless current_page?(page_home_path) %>
+              <%= link_to content_tag(:i, "", class: "glyphicon glyphicon-arrow-left"), :back, :id => "open-contacts-dialog-btn", :class => "btn btn-my", :method => :get %>
+            <% end %>
+            <%= link_to content_tag(:i, "", class: "glyphicon glyphicon-home"), page_home_path, :id => "open-contacts-dialog-btn", :class => "btn btn-my", :method => :get %>
+          </div>
           <% end %>
         </div>
         <div class="navbar-collapse collapse" id="navbar">
@@ -120,11 +127,11 @@
         <% end %>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <% if current_user.try(:admin?) %>
+          <!-- <% if current_user.try(:admin?) %>
             <li class="right"><%= link_to "Admin", new_user_session_path %></li>
           <% else %>
             <li class="right"><%= link_to "User", new_user_session_path %></li>
-          <% end %>
+          <% end %> -->
     			<% if user_signed_in? %>
     			  <li class="right"><%= link_to "Sign out", destroy_user_session_path, method: :get %></li>
     			<% else %>
