--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
  // control the screen sizes
 
 /* uncomment and modify to change defaults bootstrap sizes  */
+/*
 $screen-xs-min: 300px;
 $screen-sm-min: 400px;
 $screen-md-min: 1000px;
@@ -24,7 +25,7 @@ $screen-lg-min: 1200px;
 // this tells which screen size to use to start breaking on
 // will tell navbar when to collapse
 $grid-float-breakpoint: $screen-md-min;
-
+*/
 
 
 @import "bootstrap-sprockets";
@@ -187,6 +188,10 @@ input{
   
 }
 
+.img-small {
+  width: 160px;
+}
+
 @media (max-width: $screen-sm-min) {
 
   .hide-on-small-device {
@@ -197,6 +202,10 @@ input{
   {
     width: 100%;
     z-index: 0;
+  }
+
+  .img-small {
+    width: 120px;
   }
 }
 
