On detail page, also hide the <td> column which wasted little space on left side

--- a/app/views/page/detail.html.erb
+++ b/app/views/page/detail.html.erb
@@ -4,7 +4,7 @@
   <table class="table table-striped">
     <tbody>
       <tr>
-        <td>
+        <td class="hide-on-small-device">
           <%= image_tag(@record.img_small, width: '160', :class => "hide-on-small-device") %>
         </td>
         <td>
