--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -147,7 +147,7 @@ p {
 
 .scrollable-menu {
     height: auto;
-    max-height: 50vh;
+    max-height: auto;
     overflow-x: hidden;
     overflow-y: scroll;
 }
@@ -220,10 +220,6 @@ input{
     font-size: x-small;
   }
 
-  .scrollable-menu {
-    max-height: 300px;
-  }
-
 }
 
 .control-group {
@@ -254,7 +250,7 @@ input{
 
 .navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
   height: auto;
-  max-height: 80vh;
+    max-height: 90vh;
   overflow-y: scroll;
 }
 
