better to scroll the dropdown menu instead of the navbar menu itself...

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -147,9 +147,9 @@ p {
 
 .scrollable-menu {
     height: auto;
-    max-height: auto;
-    overflow-x: hidden;
+    max-height: 90vh;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 /*.nav, .navbar-nav, .navbar-right {
@@ -250,8 +250,8 @@ input{
 
 .navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
   height: auto;
-    max-height: 90vh;
-  overflow-y: scroll;
+  max-height: 90vh;
+  /*overflow-y: scroll;*/
 }
 
 /*.dropdown-menu {
