--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -251,7 +251,7 @@ input{
 .navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
   height: auto;
   max-height: 90vh;
-  /*overflow-y: scroll;*/
+  overflow-y: scroll;
 }
 
 /*.dropdown-menu {
