--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -147,7 +147,7 @@ p {
 
 .scrollable-menu {
     height: auto;
-    max-height: 90vh;
+    /*max-height: 90vh;*/
     overflow-y: scroll;
     overflow-x: hidden;
 }
