- add wait gif (spinner.gif) when login - add Nokogiri gem to parse html (to get allocine data)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -262,3 +262,8 @@ input{
     background-color: #0099cc;
     color: #fff;
 }
+
+#addfilm-div .form-control {
+  display: inline;
+  margin: 10px;
+}
