- in detail page, the original title was display even if it was an empty string - users and records tables are not linked together so remove "has many" and "belongs to"

--- a/app/views/page/detail.html.erb
+++ b/app/views/page/detail.html.erb
@@ -16,7 +16,7 @@
               </td>
               <td style="width: 100%">
                 <%= @record.nom.html_safe %>  
-                <%= @record.nomoriginal.nil? ? "" : "<br><small><i>(#{@record.nomoriginal})</i></small>".html_safe %>
+                <%= @record.nomoriginal.nil? || @record.nomoriginal == "" ? "" : "<br><small><i>(#{@record.nomoriginal})</i></small>".html_safe %>
               </td>
             </tr>
             <tr>
